--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "bshaffer/oauth2-server-php": "~1.8",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
